[gd_scene load_steps=9 format=3 uid="uid://dlbhca3tu1lin"]

[ext_resource type="Script" path="res://components/Menu/Options/Options.gd" id="1"]
[ext_resource type="FontFile" uid="uid://c4wkpvq38gdoq" path="res://assets/fonts/Arcade.ttf" id="2"]
[ext_resource type="FontFile" uid="uid://doesrguwx81i0" path="res://assets/fonts/8bitOperatorPlus-Bold.ttf" id="3"]
[ext_resource type="PackedScene" path="res://components/Menu/Slider/Slider.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://vy8ykdp0wu7f" path="res://components/Menu/Label/Label.tscn" id="5"]

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/140/0 = Vector2(0, 0)
cache/0/140/0/ascent = 0.0
cache/0/140/0/descent = 0.0
cache/0/140/0/underline_position = 0.0
cache/0/140/0/underline_thickness = 0.0
cache/0/140/0/scale = 1.0
cache/0/140/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/140/0/kerning_overrides/140/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Options" type="VBoxContainer"]
offset_left = 360.0
offset_right = 1480.0
offset_bottom = 1060.0
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("1")

[node name="OptionsTitle" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 140
text = "Options
"

[node name="FullScreen" type="CheckBox" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Fullscreen"

[node name="MasterVolume" parent="." instance=ExtResource("4")]
layout_mode = 2
label = "Master volume"

[node name="MusicVolume" parent="." instance=ExtResource("4")]
layout_mode = 2
label = "Music volume"

[node name="SFXVolume" parent="." instance=ExtResource("4")]
layout_mode = 2
label = "SFX Volume"

[node name="Save" parent="." instance=ExtResource("5")]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Save"

[connection signal="toggled" from="FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="value_changed" from="MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="selected" from="Save" to="." method="_on_Save_selected"]
